--- a/config.toml
+++ b/config.toml
@@ -44,7 +44,7 @@ external_links_no_follow = true
 
 external_links_no_referrer = true
 
-smart_punctuation = true
+smart_punctuation = false
 
 [link_checker]
 skip_prefixes = [
