--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-base_url = "https://oliverdding.github.io"
+base_url = "https://charmer.fun"
 title = "Aurora"
 description = "Sidere mens eadem mutato"
 default_language = "zh"
