--- a/config.toml
+++ b/config.toml
@@ -113,7 +113,7 @@ twitter = "oliverdding"
 # mastodon = "<mastadon_username>"
 
 [extra.analytics]
-google = "G-J661LYF5TY"
+google = "G-LXDSXGWDES"
 
 # To add disqus comments
 [extra.commenting]
