--- a/config.toml
+++ b/config.toml
@@ -8,7 +8,7 @@ output_dir = "public"
 
 compile_sass = true
 
-minify_html = false
+minify_html = true
 
 ignored_content = ["*.{graphml,xlsx}", "temp.*"]
 
